# pranatics

./: .gitignore  README.md
playground/: .example.env  (+2 more)
sources/frontend/: main.py  pyproject.toml  utils.py
sources/pipeline/: pyproject.toml  requirements.txt
sources/pipeline/hedera_pipeline/: README.md  pyproject.toml  setup.cfg  setup.py
sources/pipeline/hedera_pipeline/data/jsons/: crypto_transfer.json  predictions.json  transactions.json
sources/pipeline/hedera_pipeline/data/staging/: data.duckdb
sources/pipeline/hedera_pipeline/hedera_pipeline/: assets.py  clear_db.py  definitions.py  example.constanst.py  jobs.py  resources.py  schedules.py  utils.py
sources/pipeline/hedera_pipeline/tmp1xkltnil/history/: runs.db
sources/pipeline/hedera_pipeline/tmp1xkltnil/history/runs/: 0258721e-14ca-4028-b74d-c24f49a0f43b.db  0d3cd1ac-0d2e-44fe-a9c5-fcee0bc26c1c.db  122fd952-15ec-4dc7-a932-bb2f72052f26.db  15db77ba-23b1-4f5f-a5d4-79fa7130e498.db  16cf2274-9d8f-4d3c-bb38-b8f0d0758a96.db  19f9dd2f-37fe-46ab-a242-7b573062c739.db  1c8bfad1-54c6-4c16-b8f4-df8731be03cf.db  1d2425f9-d748-43c8-a359-edd0ad00936b.db  1dbbed3c-92f4-4d82-8f64-c43dd3f66c77.db  20261839-36c2-4e9b-ae39-ca9893c59e24.db  2fc6f3c7-44f8-4ef1-adf7-54149eaa50eb.db  (+41 more)
sources/pipeline/hedera_pipeline/tmp1xkltnil/schedules/: schedules.db
sources/pipeline/hedera_pipeline/tmp5rtwsf3h/history/: runs.db
sources/pipeline/hedera_pipeline/tmp5rtwsf3h/schedules/: schedules.db
sources/pipeline/hedera_pipeline/tmpl4e0b3ly/history/: runs.db
sources/pipeline/hedera_pipeline/tmpl4e0b3ly/schedules/: schedules.db
(+187 files in other folders)
